<?xml version="1.0"?>
<package>
  <name>odrive_cpp_ros</name>
  <version>0.0.1</version>
  <description>Odrive driver for ros integration with ros_control</description>
  <author>Ben Burgess-Limerick</author>
  <license>MIT</license>
  <maintainer email="benburgesslimerick@gmail.com"></maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>hardware_interface</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>hardware_interface</run_depend>

  <export>
  </export>
</package>
